--- a/client/src/components/Navigation/navigation.css
+++ b/client/src/components/Navigation/navigation.css
@@ -1,8 +1,8 @@
-.navigation {
+/* .navigation {
 	display: flex;
 	justify-content: center;
 	width: 100%;
-}
+} */
 .bp3-navbar {
 	background-color: #81715e;
 }
